--- a/templates/customer_support/index.html.twig
+++ b/templates/customer_support/index.html.twig
@@ -84,5 +84,11 @@
   </div>
 </div>
 
-
+    <script type="text/javascript">
+        $(document).ready(function() {
+            console.log("Hola Mundo");
+        });
+    </script>
 {% endblock %}
+
+
