--- a/templates/customer_support/index.html.twig
+++ b/templates/customer_support/index.html.twig
@@ -39,7 +39,7 @@
 <div class="card">
   <div class="card-body">
     <div class="row">
-        <div class="col-10">
+        <div class="col-10" style="min-height: 100px;">
             <div class="container px-1">
                 <div class="row gx-5">
                     {% for item in list %}
@@ -82,7 +82,7 @@
 <div class="card">
   <div class="card-body">
     <div class="row">
-        <div class="col-10">
+        <div class="col-10" style="min-height: 100px;">
             <div class="container px-1">
                 <div class="row gx-5">
                     {% for item in list %}
@@ -120,11 +120,7 @@
   </div>
 </div>
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            console.log("Hola Mundo");
-        });
-    </script>
+<div id="div1"></div>
+
+
 {% endblock %}
-
-
